fixed body overflow css

--- a/mqtt/src/components/Chat/Chat.module.css
+++ b/mqtt/src/components/Chat/Chat.module.css
@@ -10,7 +10,6 @@
     flex-direction: column;
     word-wrap: break-word;
     gap: 10px;
-    padding: 10px;
 }
 
 .chat > form {
@@ -18,14 +17,12 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-    padding: 5px;
 }
 
 .send_message {
     width: 100%;
     display: flex;
     gap: 5px;
-    padding: 0px;
 }
 .send_message > input[type='text'] {
     flex-basis: 90%;
