--- a/mqtt/src/index.css
+++ b/mqtt/src/index.css
@@ -8,14 +8,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
-    height: 100vh;
-    width: 100vw;
-    padding: 2px;
-}
 div#root {
     height: 100%;
     width: 100%;
+    padding: 2px;
 }
 
 p {
